# qamaits

./: .gitignore  Cargo.toml  README.md  db.toml  qamaits-redirect  settings.toml
examples/: index.html
qamaits-redirect/: Cargo.toml
qamaits-redirect/src/: main.rs
src/: main.rs
src/serve/: authorizer.rs  configuration.rs  database.rs  database_errors.rs  database_structures.rs  emailer.rs  mod.rs  oauth.rs  server.rs
src/serve/api/: v1.rs
tls/: localhost+2-key.pem  localhost+2.pem  server.crt  server.key
