[package]
name = "qamaits"
version = "0.1.0"
authors = ["ianmott"]
edition = "2018"


[dependencies]
tokio = { version = "0.2", features = ["macros"] }
bson = "0.14.1"
warp = {version = "0.2.2", features = ["tls"]}
mongodb = "0.9.2"
config = "0.10.1"
serde = "1.0.105"
futures = "0.3.4"
bcrypt = "0.6.3"
validator = "0.10.0"
validator_derive = "0.10"
rand = "0.7.3"
lettre = "0.9.2"
lettre_email = "0.9.2"
threadpool = "1.7.1"
oauth2 = "2.0"
url = "1.0"
base64 = "0.12.0"
curl = "0.4.28"