[package]
name = "qamaits"
version = "0.1.0"
authors = ["ianmott"]
edition = "2018"


[dependencies]
tokio = { version = "0.2", features = ["macros"] }
bson = "0.14.1"
warp = {git = "https://github.com/seanmonstar/warp.git", branch = "master", features = ["tls"]}
mongodb = "0.9.2"
config = "0.10.1"
serde = "1.0.106"
serde_json = "1.0.51"
futures = "0.3.4"
bcrypt = "0.7.0"
validator = "0.10.0"
validator_derive = "0.10"
rand = "0.7.3"
lettre = "0.9.2"
lettre_email = "0.9.2"
threadpool = "1.7.1"
oauth2 = "2.0"
url = "1.0"
base64 = "0.12.0"
curl = "0.4.28"
openssl = "0.10.29"
openssl-sys="0.9.55"
rustc-serialize = "0.3.24"
bytes = "0.5.4"
